--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "raviger": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "serve-static": "^1.15.0"
   },
   "devDependencies": {
